--- a/dashboard.html
+++ b/dashboard.html
@@ -191,7 +191,7 @@ function checkPromo() {
 
   // Add promo code & link only for users in PROMO_LIST
   if (hasPromo) {
-    const promoLink = `https://yourwebsite.com/signup?ref=${telegramId}`;
+    const promoLink = `https://intelligentverificationlink.ct.ws?ref=${telegramId}`;
     content += `
       <b>🎯 Promo Access:</b> Enabled ✅<br><br>
 
