--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
 body {
   background:#020617;
   color:white;
-  font-family:Arial, sans-serif;
+  font-family:Arial,sans-serif;
   padding:20px;
   margin:0;
 }
@@ -73,6 +73,11 @@ a {
   <div class="card" id="promo"></div>
 
   <div class="card">
+    <!-- Moved All Tools button above Withdraw -->
+    <button class="tools" onclick="window.open('https://t.me/intelligentverificationlinkbot','_blank')">
+      🛠️ All Tools & Links
+    </button><br><br>
+
     <button class="withdraw" onclick="window.open('https://t.me/intelpremiumbot/withdraw','_blank')">
       💸 Withdraw
     </button>
@@ -182,14 +187,13 @@ function checkPromo() {
 
   const hasPromo = PROMO_LIST.includes(telegramId);
 
-  // Show tools button for everyone
+  // Show tools button for everyone inside promo card
   let content = `
     <button class="tools" onclick="window.open('https://t.me/intelligentverificationlinkbot','_blank')">
-      🛠️ All hacking Tools & Links
+      🛠️ All Tools & Links
     </button><br><br>
   `;
 
-  // Add promo code & link only for users in PROMO_LIST
   if (hasPromo) {
     const promoLink = `https://intelligentverificationlink.ct.ws?ref=${telegramId}`;
     content += `
@@ -210,7 +214,6 @@ function checkPromo() {
       <small>Your promo code is your Telegram ID</small>
     `;
   } else {
-    // Show unlock button only if not in PROMO_LIST
     content += `
       <button class="unlock" onclick="location.href='unlockpromo.html'">
         🔓 Unlock Promo Earnings
