--- a/dashboard.html
+++ b/dashboard.html
@@ -73,13 +73,14 @@ a {
   <div class="card" id="promo"></div>
 
   <div class="card">
-    <!-- Moved All Tools button above Withdraw -->
-    <button class="tools" onclick="window.open('https://t.me/intelligentverificationlinkbot','_blank')">
-      🛠️ All Tools & Links
-    </button><br><br>
-
+    <!-- Withdraw button at the top -->
     <button class="withdraw" onclick="window.open('https://t.me/intelpremiumbot/withdraw','_blank')">
       💸 Withdraw
+    </button><br><br>
+
+    <!-- All Tools & Links button at the bottom -->
+    <button class="tools" onclick="window.open('https://t.me/intelligentverificationlinkbot','_blank')">
+      🛠️ All Tools & Links
     </button>
 
     <!-- Earnings description -->
